[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/menu/characterCustomization.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/bg2.png" type="Texture" id=2]
[ext_resource path="res://themes/menu.tres" type="Theme" id=3]
[ext_resource path="res://assets/player/idle.png" type="Texture" id=4]
[ext_resource path="res://assets/player/hats/layton.png" type="Texture" id=5]
[ext_resource path="res://themes/popup.tres" type="Theme" id=6]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="background" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -300.0
margin/top = 0.0
margin/right = -300.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="menuTitle" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 40.0
text = "Personnalisation"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 40.0
margin/right = 1920.0
margin/bottom = 1040.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1000.0
margin/bottom = 1000.0
alignment = 0

[node name="ItemList" type="ItemList" parent="VBoxContainer/HBoxContainer/VBoxContainer"]

visibility/self_opacity = 0.8
rect/min_size = Vector2( 1000, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1000.0
margin/bottom = 800.0
custom_constants/hseparation = 10

[node name="Panel" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]

visibility/self_opacity = 0.8
rect/min_size = Vector2( 0, 200 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 800.0
margin/right = 1000.0
margin/bottom = 1000.0

[node name="hatDescription" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 993.0
margin/bottom = 193.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]

visibility/self_opacity = 0.8
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 1000.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1000.0
__meta__ = {
"_edit_lock_": true
}

[node name="victor" type="Sprite" parent="VBoxContainer/HBoxContainer/PanelContainer"]

transform/pos = Vector2( 502.464, 505.385 )
transform/scale = Vector2( 2.53726, 2.53726 )
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="hat" type="Sprite" parent="VBoxContainer/HBoxContainer/PanelContainer/victor"]

visibility/visible = false
transform/pos = Vector2( -0.439394, -125.182 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="pointsDisplay" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 7.0
margin/top = 7.0
margin/right = 913.0
margin/bottom = 993.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode/enabled = true
bbcode/bbcode = "[right]Money : 0[/right]"
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="returnButton" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 902.0
margin/top = 1040.0
margin/right = 1017.0
margin/bottom = 1080.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Retour"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="buyPopup" type="ConfirmationDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 6 )
margin/left = 610.0
margin/top = 440.0
margin/right = 1310.0
margin/bottom = 540.0
popup/exclusive = false
window/title = ""
dialog/text = "4 points"
dialog/hide_on_ok = true

[connection signal="item_activated" from="VBoxContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]

[connection signal="pressed" from="VBoxContainer/returnButton" to="." method="_on_returnButton_pressed"]


